# faststream-concurrent-aiokafka

./: .gitignore  CLAUDE.md  Dockerfile  Justfile  README.md  context7.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
faststream_concurrent_aiokafka/: __init__.py  batch_committer.py  consts.py  healthcheck.py  middleware.py  processing.py  rebalance.py
tests/: conftest.py  mocks.py  test_concurrent_processing.py  test_healthcheck.py  test_integration.py  test_kafka_committer.py  test_middleware.py  test_rebalance.py
